# ImmuneBuilder

./: .gitignore  LICENSE  MANIFEST.in  README.md  pyproject.toml  setup.py
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: codeql.yml
ABodyBuilder2/: ABodyBuilder2.py  __init__.py  constants.py  models.py  refine.py  rigids.py  util.py
ImmuneBuilder/: ABodyBuilder2.py  NanoBodyBuilder2.py  TCRBuilder2.py  __init__.py  constants.py  models.py  refine.py  rigids.py  sequence_checks.py  util.py
data/: antibody_data.csv  nanobody_data.csv  tcr_data.csv
notebook/: ImmuneBuilder.ipynb
scripts/: predict-nanobody.py  refine-nanobody.py
tests/: data.py  test_sequence_checks.py
