[project]
name = "ImmuneBuilder"
description = "Set of functions to predict the structure of immune receptor proteins"
maintainers = [
  {name = "Brennan Abanades", email = "brennan.abanadeskenyon@stx.ox.ac.uk"}
]
readme = "README.md"
version = "1.2"
requires-python = "~=3.10.0"
license = { file = "LICENSE" }
dependencies = [
    "numpy ~= 1.26",
    "packaging ~= 24.1",
    "pdbfixer @ git+https://github.com/openmm/pdbfixer.git",
    "hmmer ~= 3.4",
    "torch ~= 2.4",
    "einops ~= 0.8",
    "requests ~= 2.32",
    "scipy ~= 1.10",
    "riot_na ~= 1.2"
]

[project.optional-dependencies]
# development dependency group
development = [
    "pytest"
]


[tool.poetry.dependencies]
numpy = "~=1.26"
packaging = "~= 24.1"
pdbfixer = "git+https://github.com/openmm/pdbfixer.git"
hmmer = "~= 3.4"
torch = "~= 2.4"
einops = "~= 0.8"
requests = "~= 2.32"
scipy = "~= 1.14"
anarci = "git+https://github.com/NaturalAntibody/ANARCI.git"